--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,10 +1,11 @@
 
 #navbar{
-    position: fixed;
+    position: fixed; top: 0;
     z-index: 999999;
+
+    width: 100%; height: 80px;
     display: flex; align-items: center;
     
-    width: 100%; height: 80px;
     background-color: var(--bg-primary);
     box-shadow: 0 0 10px 5px var(--txt-color-primary);
 
