--- a/static/css/formulaire.css
+++ b/static/css/formulaire.css
@@ -4,23 +4,21 @@
 }
 
 .full-form{
-    width: 100%;
+    width: 100%; height: 100%;
+    padding: 50px;
+
     display: flex;
-    border-radius: 50px;
     z-index: 4;
-    overflow: hidden;
-    box-shadow: 0 0 0 1px var(--bg-tertiary);
-    transform: scale(.8);
 }
 
 .contact-form {
     flex: 1;
-    margin: 0 auto;
-    padding: 40px;
     z-index: 1;
+
+    width: 100%;
+    padding: 40px;
     
     background: var(--bg-primary);
-    box-shadow: 0 0 10px 10px var(--bg-primary);
 
     label {
         display: block;
@@ -30,7 +28,12 @@
     }
 }
 
-.form-display {
+.form-thumbnail{
+    flex: 1;
+    background: url('../img/form_thumbnail.jpg') 50% 50%/ cover;
+}
+
+.form-display{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -39,23 +42,24 @@
 form input,
 form select,
 form textarea,
-form button {
+form button{
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
+
     border: 1px solid var(--bg-tertiary);
-    border-radius: 4px;
-    font-size: 16px;
+    border-radius: 20px;
 }
 
-.submit-btn {
-    background-color: var(--bg-tertiary);
-    color: var(--description-color);
+.submit-btn{
+    background-color: var(--bg-primary);
+    border: 1px solid var(--bg-tertiary);
     cursor: pointer;
+
     transition: background-color 0.3s ease;
-    border: none;
     &:hover {
-        background-color: var(--bg-secondary);
+        background-color: var(--bg-tertiary);
+        color: var(--description-color);
     }
 }
 
@@ -75,19 +79,21 @@ form button {
 #pays{
     background-color: var(--bg-tertiary);
     color: var(--description-color);
+    border-radius: 15px;
 }
 
 .form-question{
     width: 100%;
     padding: 15px;
 
-    display: flex;
+    display: flex; flex-wrap: wrap;
     justify-content: space-around; align-items: center;
+    gap: 10px;
 
     border: 1px solid var(--bg-tertiary);
     border-radius: 4px;
+
     legend {
-        font-weight: bold;
         color: var(--txt-color-primary);
     }
     label{
@@ -117,11 +123,26 @@ form button {
         flex: 1;
     }
     div:nth-child(2){
-        min-width: 300px;
         flex: 1;
     }
 }
 
 textarea {
     resize: none;
+}
+
+@media screen and (max-width: 1000px) {
+    .full-form{
+        height: 200vh;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 800px) {
+    .full-form{
+        width: 100%;
+        padding: 10px;
+    }
+    .contact-form{
+        padding: 0;
+    }
 }
