--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,8 @@
 
 :root{
     --bg-primary: white;
-    --bg-secondary: rgb(255, 143, 197);
-    --bg-tertiary: rgb(255, 0, 123);
+    --bg-secondary: #a2a2a2;
+    --bg-tertiary: black;
 
     --txt-color-primary: black;
     --weak-txt-color: rgb(152, 152, 152);
