--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -3,11 +3,11 @@
     position: fixed; top: 0;
     z-index: 999999;
 
-    width: 100%; height: 80px;
+    width: 100%; height: 60px;
     display: flex; align-items: center;
     
     background-color: var(--bg-primary);
-    border-bottom: 1px solid var(--txt-color-primary);
+    box-shadow: 0 0 5px var(--bg-secondary);
 
     font-size: clamp(16px, 2vw, 24px);
 
@@ -57,6 +57,7 @@
     z-index: 999;
 
     position: fixed;
+    top: 0;
     width: 100%; height: 100%;
 
     display: flex;
