--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,7 +20,6 @@ body{
     font-family: 'Playfair Display';
     min-height: 100vh;
     position: relative;
-    top: 80px;
 }
 
 li{
@@ -32,8 +31,13 @@ a{
     color: var(--txt-color-primary);
 }
 
+.art-link{
+    color: var(--link-color);
+}
+
 #main{
     min-height: 100vh;
+    margin-top: 140px;
 }
 
 #footer{
@@ -42,6 +46,8 @@ a{
 
     display: flex; flex-direction: column;
     align-items: center;
+
+    font-size: clamp(8px, 1vw, 16px);
     .navlist{
         width: 80%;
         padding-block: 10px 30px;
@@ -51,7 +57,6 @@ a{
         border-top: 1px solid var(--bg-tertiary);
         li{
             padding-inline: 2vw;
-            font-size: clamp(8px, 1vw, 16px);
         }
     }
     .copyrights{
