--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -32,14 +32,17 @@
 }
 
 .cpt{
-    width: 60px; height: 150px;
+    width: 60px; height: 140px;
     position: relative;
     overflow: hidden;
     &::before, &::after{
         content: '';
-        width: 100%; height: 50px;
+        width: 100px; height: 50px;
         position: absolute;
         z-index: 1;
+
+        left: 50%;
+        transform: translate(-50%);
 
         backdrop-filter: brightness(.1);
     }
@@ -61,7 +64,7 @@
     animation: slideDown 1s 1s ease-in-out forwards;
     h1{
         width: 100%; height: 100%;
-        
+
         display: flex;
         justify-content: center; align-items: center;
     }
