--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -13,7 +13,7 @@
     justify-content: center; align-items: center;
     gap: 15px;
 
-    transform: scale(2);
+    transform: scale(2.2);
 }
 
 .loading-title{
@@ -37,7 +37,7 @@
     overflow: hidden;
     &::before, &::after{
         content: '';
-        width: 100px; height: 50px;
+        width: 100px; height: 60px;
         position: absolute;
         z-index: 1;
 
@@ -47,10 +47,10 @@
         backdrop-filter: brightness(.1);
     }
     &::before{
-        top: -5px;
+        top: -10px;
     }
     &::after{
-        bottom: 0;
+        bottom: -10px;
     }
 }
 
