--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@ body{
     background-color: var(--bg-primary);
     color: var(--txt-color-primary);
     font-family: 'Playfair Display';
-    min-height: 100vh;
+    min-height: max-content;
     position: relative;
 }
 
