update form anwser' css

--- a/static/css/form_anwser.css
+++ b/static/css/form_anwser.css
@@ -20,6 +20,8 @@
         color: var(--description-color);
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
+        display: flex;
+        align-items: center;
     }
     span{
         flex: 3;
