--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -67,5 +67,8 @@ a{
         p{
             padding: 5px 25px;
         }
+        a{
+            color: var(--bg-secondary);
+        }
     }
 }
